--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div>
+    <div class="logo-text">
+        TODO-LIST
+    </div>
+
+    <div class="box-input-name">
+        <div class="input-field text-gray">
+            <input type="text" id="input-name">
+            <label for="input-name">Enter your name</label>
+        </div>
+    </div>
+</div>
