--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,21 +7,19 @@
         <div class="input-field text-gray">
             <input type="text" id="input-user" [(ngModel)]="formInput.username" (keyup)="onkeyInput($event)">
             <label for="input-user">Username</label>
-            <div class="wrap-error-msg">
-                <div class="input-error scale-transition" [class]="{'scale-out' : formError.username.length == 0}">{{formError.username}}</div>
-            </div>
         </div>
         <div class="input-field text-gray">
             <input type="password" id="input-pass" [(ngModel)]="formInput.password" (keyup)="onkeyInput($event)">
             <label for="input-pass">Password</label>
-            <div class="wrap-error-msg">
-                <div class="input-error scale-transition" [class]="{'scale-out' : formError.username.length == 0}">{{formError.username}}</div>
-            </div>
+        </div>
+
+        <div class="wrap-error-msg">
+            <div class="input-error scale-transition" [class]="{'scale-out' : errorMsg.length == 0}">{{errorMsg}}</div>
         </div>
 
         <div class="row padding-top">
             <div class="col s6">
-                <button class="d-block w-100 waves-effect blue-grey lighten-4 btn">Register</button>
+                <button class="d-block w-100 waves-effect blue-grey lighten-4 btn" (click)="sendRegister()">Register</button>
             </div>
             <div class="col s6">
                 <button class="d-block w-100 waves-effect blue-grey btn" (click)="testAnimate()">Login</button>
