--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -15,9 +15,14 @@
     padding-top: 20px;
 }
 .wrap-error-msg {
-    height: 22px;
+    height: 42px;
+
 
     .input-error {
-        color: #f44336;
+        background: #f44336;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        border-radius: 3px;
     }
 }
