--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
                 <button class="d-block w-100 waves-effect blue-grey lighten-4 btn" (click)="sendRegister()">Register</button>
             </div>
             <div class="col s6">
-                <button class="d-block w-100 waves-effect blue-grey btn" (click)="testAnimate()">Login</button>
+                <button class="d-block w-100 waves-effect blue-grey btn" (click)="sendAuth()">Login</button>
             </div>
             <div class="col s12 padding-top">
                 <button class="d-block w-100 waves-effect waves-teal btn-flat">SKIP LOGIN</button>
