--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,1 +1,8 @@
-<p>list works!</p>
+<div class="top-bar">
+    <div class="right-area">
+        <div class="body-box-top">
+            <div class="username-text">{{username}}</div>
+            <button class="waves-effect blue-grey lighten-2 btn-small" (click)="logout()">LOGOUT</button>
+        </div>
+    </div>
+</div>
