--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
                 <button class="d-block w-100 waves-effect blue-grey btn" (click)="sendAuth()">Login</button>
             </div>
             <div class="col s12 padding-top">
-                <button class="d-block w-100 waves-effect waves-teal btn-flat">SKIP LOGIN</button>
+                <button class="d-block w-100 waves-effect waves-teal btn-flat" (click)="skipLogout()">SKIP LOGIN</button>
             </div>
         </div>
     </div>
