--- a/src/style/input.scss
+++ b/src/style/input.scss
@@ -25,16 +25,19 @@
     }
     /* valid color */
     .input-field input[type="text"].valid {
-        border-bottom: 1px solid #000;
-        box-shadow: 0 1px 0 0 #000;
+        border-bottom: 1px solid $color;
+        box-shadow: 0 1px 0 0 $color;
     }
     /* invalid color */
     .input-field input[type="text"].invalid {
-        border-bottom: 1px solid #000;
-        box-shadow: 0 1px 0 0 #000;
+        border-bottom: 1px solid $color;
+        box-shadow: 0 1px 0 0 $color;
     }
     /* icon prefix focus color */
-    .input-field .prefix.active {
-        color: #000;
+    .input-field .prefix {
+        color: $color;
+        &.active {
+            color: $active-color;
+        }
     }
 }
