--- a/src/app/api-spec/api-spec.component.html
+++ b/src/app/api-spec/api-spec.component.html
@@ -71,7 +71,7 @@
 
             <tr>
                 <td>Login</td>
-                <td>/account/auth</td>
+                <td>/auth</td>
                 <td>POST</td>
                 <td>
                     <pre>{{ printJson({ username: 'string', password: 'string' }) }}</pre>
